k8s/apps/redlib/redlib-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redlib
spec:
  selector:
    app: redlib
  ports:
    - port: 8080
      targetPort: 8080
